--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
   
 	<article>
     
+		<header class="gradient-{{ gradient }}" data-animation="fadeInDownBig">
+
+			{% include excerpt.html %}
+
+		</header>
 
 		<div class="body" data-animation="fadeInUp">
 
