--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@
   
 	<article>
     
-		
+		<header class="gradient-{{ gradient }}" data-animation="fadeInDownBig">
+
+
+
+		</header>
 
 		<div class="body" data-animation="fadeInUp">
 
