--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 
       <footer data-animation="fadeInUp">
         <div class="copyright">
-          {% if site.copyright %}<b>{{ site.copyright }}</b>{% endif %}
-            Photo by <a href="https://unsplash.com/@anniespratt">Annie Spratt on Unsplash</a>
+          {% if site.copyright %}<b>{{ site.copyright }}</b>{% endif %}, 
+            Photo by <a href="https://unsplash.com/@anniespratt">Annie Spratt<a/>.
         	{% if site.email %}<a href="mailto:{{ site.email }}" title="Send E-Mail">Contact</a>{% endif %}
         	<a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="Subscribe to Feed">RSS</a>
         </div>
