--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,9 @@
       
     {% endif %}
     
+    <script src="{{ '/assets/jquery-2.1.1.min.js' | prepend: site.baseurl }}"></script>
+    <script src="{{ '/assets/scripts.js' | prepend: site.baseurl }}"></script>
+          
   </body>
 
 </html>
